package com.openclassrooms.tourguide.config;

import lombok.Data;

@Data
public class RewardProperties {
    private int defaultProximityBuffer;
    private int attractionProximityRange;
}
