@startuml

' ========================
' STYLE
' ========================

skinparam packageStyle rectangle
skinparam class {
  BackgroundColor #FDF6E3
  BorderColor #586E75
  ArrowColor #268BD2
}

' ========================
' APPLICATION PACKAGE
' ========================
package "TourGuide App" {

  ' CONTROLLER
  package "Controller" {
    class TourGuideController
  }

  ' MAPPER / DTO
  package "Mapper" {
    class AttractionMapper <<MapStruct>>
    class NearbyAttractionDto

    AttractionMapper --> NearbyAttractionDto
  }

  ' SERVICES
  package "Service" {
    class TourGuideService {
      - testMode : boolean
    }
    class GpsService
    class RewardService
    class TripPricerService
  }

  ' INFRASTRUCTURE
  package "Infrastructure" {
    class Tracker <<background thread>>
    Tracker --> TourGuideService : uses for tracking users
  }

  ' DOMAIN PERSISTENCES
  package "Domain (In-Memory)" {
    class User
    class UserPreferences
    class UserReward
    class VisitedLocation
    class Attraction

    User "1" --> "*" VisitedLocation
    User "1" --> "*" UserReward
    User "1" --> "1" UserPreferences

    UserReward "1" --> "1" VisitedLocation
    UserReward "1" --> "1" Attraction
  }

  ' TEST SUPPORT
  package "Helper (for internal Testing)" {
    class InternalTestHelper
  }

  ' CONFIGURATION
  package "Configuration" {
    class RewardProperties
  }

}

' ========================
' EXTERNAL SYSTEMS
' ========================
package "External Systems" {
  class GpsUtil
  class RewardCentral
  class TripPricer
}


' ========================
' CLIENT
' ========================
class Client

' ========================
' RELATIONS INTERNES
' ========================
TourGuideController --> TourGuideService
TourGuideController --> NearbyAttractionDto
TourGuideService --> AttractionMapper : maps to DTO
TourGuideService --> GpsService
TourGuideService --> RewardService
TourGuideService --> TripPricerService

TourGuideService --> User
TourGuideService ..> InternalTestHelper : only if testMode

' ========================
' RELATIONS VERS L'EXTÉRIEUR
' ========================
GpsService --> GpsUtil
RewardService --> RewardCentral
RewardService --> RewardProperties
TripPricerService --> TripPricer


' ========================
' RELATIONS AVEC CLIENT
' ========================
Client --> TourGuideController : HTTP request
TourGuideController --> Client : HTTP response

' ========================
' LEGEND
' ========================
package  as LegendBox {
  class Legend {
  - <color:#268BD2>⟶</color> : relation directe / utilisation
  - <color:#268BD2>⇢</color> : dépendance faible ou utilisation optionnelle
  - Cardinalité :
        1 <color:#268BD2>⟶</color> * : un objet vers plusieurs objets
        1 <color:#268BD2>⟶</color> 1 : un objet vers un autre objet
  - Stéréotype (MapStruct, background thread) : rôle particulier d'une classe
  }
}

@enduml